--- a/src/app/components/sidenav-item/sidenav-item.component.html
+++ b/src/app/components/sidenav-item/sidenav-item.component.html
@@ -6,18 +6,17 @@
   <ng-container *ngFor="let child of sidenavItem.children">
     <a
       *ngIf="!child.externalLink"
-      class="px-3 py-2 transition-colors duration-200 relative block hover:text-gray-900 text-gray-500"
+      class="px-3 py-2 transition-colors duration-200 relative block hover:text-green-700 text-gray-500"
       [routerLink]="child.link"
-      [routerLinkActive]="'bg-gray-200'"
+      [routerLinkActive]="'bg-green-50 text-green-700'"
       [routerLinkActiveOptions]="{ exact: true }"
     >
       {{ child.title }}
     </a>
     <a
       *ngIf="child.externalLink"
-      class="px-3 py-2 transition-colors duration-200 relative block hover:text-gray-900 text-gray-500"
+      class="px-3 py-2 transition-colors duration-200 relative block hover:text-green-700 text-gray-500"
       target="_blank"
-      rel="noopener"
       [href]="child.link"
     >
       {{ child.title }}
