--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,7 +1,8 @@
-<div class="md:flex flex-col md:flex-row md:min-h-screen w-full">
+<div class="md:flex flex-col md:flex-row md:min-h-screen w-full pb-8">
   <div class="flex flex-col w-full md:w-64 text-gray-700 bg-white flex-shrink-0">
-    <div class="flex-shrink-0 px-8 py-4 flex flex-row items-center justify-between">
+    <div class="flex-shrink-0 px-8 py-4 flex flex-row items-center justify-between border-b">
       <a
+        href="#"
         class="
           text-lg
           font-semibold
@@ -26,4 +27,5 @@
       </ul>
     </nav>
   </div>
+  <router-outlet></router-outlet>
 </div>
