feat: add documentation for installation

--- a/src/app/pages/installation-page/installation-page.component.html
+++ b/src/app/pages/installation-page/installation-page.component.html
@@ -1,1 +1,58 @@
-<p>installation-page works!</p>
+<div class="min-w-0 w-full flex-auto lg:static lg:max-h-full lg:overflow-visible">
+  <div class="w-full flex">
+    <div class="min-w-0 flex-auto px-4 sm:px-6 xl:px-8 pt-10 pb-24 lg:pb-16">
+      <div>
+        <div class="pb-10 border-b border-gray-200 mb-10">
+          <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Installation</h1>
+        </div>
+        <p class="mt-1 text-lg text-gray-900">
+          Stilo is a utility-first Flutter library that gives you all of the building constants you need to build
+          designs without defining common styles.
+        </p>
+      </div>
+
+      <div>
+        <div class="mt-10">
+          <h1 class="inline-block text-lg font-extrabold text-gray-900 tracking-tight">Installation Guides</h1>
+        </div>
+        <p class="mt-1 text-lg text-gray-900">
+          Use the package manager
+          <a href="https://dart.dev/guides/packages" class="text-green-500 underline" target="_blank">pub</a>
+          to install Stilo.
+        </p>
+        <app-code-snippet>flutter pub add stilo</app-code-snippet>
+      </div>
+
+      <div>
+        <div class="mt-10">
+          <h1 class="inline-block text-lg font-extrabold text-gray-900 tracking-tight">Latest Updates</h1>
+        </div>
+        <div class="p-5">
+          <h3 class="font-semibold text-gray-900">May 15, 2021</h3>
+          <ul class="pl-5 pt-5">
+            <li class="list-disc">Define a spacing scale where to based constants values</li>
+            <li class="list-disc">Add new constant values based on a spacing scale</li>
+            <li class="list-disc">Improve naming of public constant values</li>
+            <li class="list-disc">Migrated to null safety</li>
+          </ul>
+        </div>
+
+        <div class="p-5">
+          <h3 class="font-semibold text-gray-900">Mar 07, 2021</h3>
+          <ul class="pl-5 pt-5">
+            <li class="list-disc">Fix duration types. Replace microseconds with milliseconds</li>
+            <li class="list-disc">Add new duration types</li>
+          </ul>
+        </div>
+
+        <div class="p-5">
+          <h3 class="font-semibold text-gray-900">Nov 22, 2020</h3>
+          <ul class="pl-5 pt-5">
+            <li class="list-disc">Define public constant values for border-radius</li>
+            <li class="list-disc">Define public constant values for edges</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
