feat: add documentation for spacing scale

--- a/src/app/pages/spacing-scale-page/spacing-scale-page.component.html
+++ b/src/app/pages/spacing-scale-page/spacing-scale-page.component.html
@@ -1,1 +1,27 @@
-<p>spacing-scale-page works!</p>
+<div class="min-w-0 w-full flex-auto lg:static lg:max-h-full lg:overflow-visible">
+  <div class="w-full flex">
+    <div class="min-w-0 flex-auto px-4 sm:px-6 xl:px-8 pt-10 pb-24 lg:pb-16">
+      <div>
+        <div class="pb-10 border-b border-gray-200 mb-10">
+          <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Spacing Scale</h1>
+        </div>
+        <p class="mt-1 text-lg text-gray-900">
+          Stilo includes a generous and comprehensive numeric spacing scale. The values are proportional, so
+          <code class="text-green-500">16</code> is twice as much spacing as <code class="text-green-500">8</code> for
+          example. One spacing unit is equal to <code class="text-green-500">4px</code>.
+        </p>
+
+        <app-hint-box>
+          <div>
+            The spacing scale is defined inside
+            <span class="font-semibold italic">StiloConfig</span>
+          </div>
+        </app-hint-box>
+      </div>
+
+      <div>
+        <app-table [columns]="columns" [rows]="rows"></app-table>
+      </div>
+    </div>
+  </div>
+</div>
