perf: allow whitespace in code snippet component

--- a/src/app/pages/installation-page/installation-page.component.html
+++ b/src/app/pages/installation-page/installation-page.component.html
@@ -20,7 +20,7 @@
           <a href="https://dart.dev/guides/packages" class="text-green-500 underline" target="_blank">pub</a>
           to install Stilo.
         </p>
-        <app-code-snippet>flutter pub add stilo</app-code-snippet>
+        <app-code-snippet codeSnippet="flutter pub add stilo"></app-code-snippet>
       </div>
 
       <div>
