--- a/src/app/components/code-snippet/code-snippet.component.html
+++ b/src/app/components/code-snippet/code-snippet.component.html
@@ -1,3 +1,1 @@
-<pre class="bg-gray-900 text-white rounded-md p-6 my-8 whitespace-nowrap">
-    <ng-content></ng-content>
-</pre>
+<pre class="bg-gray-900 text-white rounded-md p-6 my-8 whitespace-pre">{{ codeSnippet }}</pre>
