perf: use sticky table header up to sm devices

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -18,8 +18,8 @@
               <th
                 *ngFor="let column of columns"
                 class="
-                  sticky
-                  top-0
+                  sm:sticky
+                  sm:top-0
                   bg-gray-50
                   px-6
                   py-3
