fix: move router-outlet outside of sidenav component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div class="w-full max-w-8xl mx-auto">
-  <div class="lg:flex">
-    <app-sidenav></app-sidenav>
+<div class="flex flex-no-wrap">
+  <app-sidenav></app-sidenav>
+  <div class="container mx-auto pt-24 sm:pt-10 h-64 md:w-4/5 w-11/12 px-6">
+    <div class="w-full h-full">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
