--- a/src/app/components/color-grid/color-grid.component.html
+++ b/src/app/components/color-grid/color-grid.component.html
@@ -7,13 +7,10 @@
         </div>
       </div>
 
-      <div
-        *ngFor="let color of colorSwatch[name]"
-        class="min-w-0 flex-1 grid grid-cols-5 2xl:grid-cols-10 gap-x-4 gap-y-3 2xl:gap-x-2"
-      >
-        <div class="space-y-1.5">
+      <div class="min-w-0 flex-1 grid grid-cols-5 2xl:grid-cols-10 gap-x-4 gap-y-3 2xl:gap-x-2">
+        <div *ngFor="let color of colorSwatch[name]" class="space-y-1.5">
           <div
-            class="h-10 w-full rounded ring-1 ring-inset ring-black ring-opacity-0"
+            class="h-10 w-full rounded ring-1 ring-inset ring-black ring-opacity-0 border border-black"
             [style.backgroundColor]="color.hex"
           ></div>
           <div class="px-0.5 md:flex md:justify-between md:space-x-2 2xl:space-x-0 2xl:block">
