--- a/src/app/components/color-grid/color-grid.component.html
+++ b/src/app/components/color-grid/color-grid.component.html
@@ -9,16 +9,16 @@
     max-h-screen
   "
 >
-  <div *ngFor="let name of colorNames">
+  <div *ngFor="let key of colorKeys">
     <div class="flex flex-col space-y-3 sm:flex-row text-xs sm:space-y-0 sm:space-x-4">
       <div class="w-32 flex-shrink-0">
         <div class="h-10 flex flex-col justify-center">
-          <div class="text-sm font-semibold text-gray-900">{{ name }}</div>
+          <div class="text-sm font-semibold text-gray-900">{{ key }}</div>
         </div>
       </div>
 
       <div class="min-w-0 flex-1 grid md:grid-cols-2 lg:grid-cols-5 2xl:grid-cols-10 gap-x-4 gap-y-3 2xl:gap-x-2">
-        <div *ngFor="let color of colorSwatch[name]" class="space-y-1.5">
+        <div *ngFor="let color of colorSwatch[key]" class="space-y-1.5">
           <div
             class="h-10 w-full rounded ring-1 ring-inset ring-black ring-opacity-0 border border-black"
             [style.backgroundColor]="color.hex"
