fix: adjust english syntax

--- a/src/app/pages/scale-page/scale-page.component.html
+++ b/src/app/pages/scale-page/scale-page.component.html
@@ -6,7 +6,7 @@
 
   <app-hint-box>
     <div>
-      The scale construct utilities are defined inside
+      The scaling construct utilities are defined inside
       <span class="font-semibold italic">StiloTransformScale</span>
     </div>
   </app-hint-box>
