--- a/src/app/pages/translate-page/translate-page.component.html
+++ b/src/app/pages/translate-page/translate-page.component.html
@@ -6,7 +6,7 @@
 
   <app-hint-box>
     <div>
-      The translate construct utilities are defined inside
+      The translation construct utilities are defined inside
       <span class="font-semibold italic">StiloTransformTranslate</span>
     </div>
   </app-hint-box>
