--- a/src/app/pages/box-shadow-page/box-shadow-page.component.html
+++ b/src/app/pages/box-shadow-page/box-shadow-page.component.html
@@ -2,7 +2,7 @@
   <div class="pb-10 border-b border-gray-200 mb-10">
     <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Box Shadow</h1>
   </div>
-  <p class="mt-1 text-lg text-gray-900">Utilities for controlling the box shadow of a box widget.</p>
+  <p class="mt-1 text-lg text-gray-900">Utilities for controlling the box shadow of a container widget.</p>
 
   <app-hint-box>
     <div>
