--- a/src/app/pages/color-opacity-page/color-opacity-page.component.html
+++ b/src/app/pages/color-opacity-page/color-opacity-page.component.html
@@ -2,7 +2,7 @@
   <div class="pb-10 border-b border-gray-200 mb-10">
     <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Color Opacity</h1>
   </div>
-  <p class="mt-1 text-lg text-gray-900">Utilities for controlling the opacity of a widget color.</p>
+  <p class="mt-1 text-lg text-gray-900">Utilities for controlling the color opacity of a widget.</p>
 
   <app-hint-box>
     <div>
