--- a/src/app/pages/divider-page/divider-page.component.html
+++ b/src/app/pages/divider-page/divider-page.component.html
@@ -2,11 +2,11 @@
   <div class="pb-10 border-b border-gray-200 mb-10">
     <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Divider</h1>
   </div>
-  <p class="mt-1 text-lg text-gray-900">Utilities for controlling the dividing height of the elements of a list.</p>
+  <p class="mt-1 text-lg text-gray-900">Utilities for controlling the dividing height of list elements.</p>
 
   <app-hint-box>
     <div>
-      The divider construct utilities are defined inside
+      The dividing construct utilities are defined inside
       <span class="font-semibold italic">StiloDivider</span>
     </div>
   </app-hint-box>
