--- a/src/app/pages/rotate-page/rotate-page.component.html
+++ b/src/app/pages/rotate-page/rotate-page.component.html
@@ -6,7 +6,7 @@
 
   <app-hint-box>
     <div>
-      The rotate construct utilities are defined inside
+      The rotation construct utilities are defined inside
       <span class="font-semibold italic">StiloTransformRotate</span>
     </div>
   </app-hint-box>
