--- a/src/app/components/code-snippet/code-snippet.component.html
+++ b/src/app/components/code-snippet/code-snippet.component.html
@@ -1,1 +1,1 @@
-<pre class="bg-gray-900 text-white rounded-md p-6 my-8 whitespace-pre">{{ codeSnippet }}</pre>
+<pre class="bg-gray-900 text-white rounded-md p-6 my-8 whitespace-pre overflow-x-auto">{{ codeSnippet }}</pre>
